--- a/src/shared/ui/quick-menu/quick-menu.module.css
+++ b/src/shared/ui/quick-menu/quick-menu.module.css
@@ -5,6 +5,7 @@
   bottom: 24px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086);
+  z-index: var(--z-quick-menu);
 }
 @media screen and (min-width: 1000px) {
   .container {
